--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,9 @@
 title: Emma the Eng
 email: lena.emma77@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm Emma, a software engineer working in London.
+  I blog about everything, from personal coding projects,
+  working in tech and female empowerment. Nice to meet you :-)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: lenaWitterauf
