--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: lenaWitterauf
+google_analytics: G-YRZS6C454V
+
 permalink: /:categories/:title/
 
 header_pages:
