--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   I blog about everything, from personal coding projects,
   working in tech and female empowerment. Nice to meet you :-)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://emmatheeng.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: emmatheeng
 google_analytics: G-YRZS6C454V
 show_excerpts: true
