--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,6 +14,11 @@ disqus:
 
 permalink: /:categories/:title:output_ext
 
+collections:
+  projects:
+    output: true
+    permalink: /:collection/:categories:output_ext
+
 header_pages:
   - projects/index.html
   - about.html
