Added summary and TOCs to posts

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,6 +24,10 @@ header_pages:
   - life/index.html
   - about.html
 
+markdown: kramdown
+kramdown:
+  parse_block_html: true
+
 # Build settings
 theme: minima
 plugins:
